docroot/themes/custom/emulsifymars/components/02-molecules/flexible-framer/_flexible-framer.scss
/*
      Flexible Framer CSS grids:

      We use css counter (card-counter) to determine where to start next card.
      So card grid column index is equal to card-counter value.

      Image Wrapper, Card Heading, Subheading, Body and CTA Wrapper is a grid items.
      They've got fixed grid-row values.

      ╔══════════════════════════════════════╦══════════════════════════════════════╗
      ║                                      ║                                      ║
      ║             Image Wrapper            ║             Image Wrapper            ║
      ║                                      ║                                      ║
      ╠══════════════════════════════════════╬══════════════════════════════════════╣
      ║             Card Heading             ║             Card Heading             ║
      ╠══════════════════════════════════════╬══════════════════════════════════════╣
      ║              Card Body               ║              Card Body               ║
      ╠══════════════════════════════════════╬══════════════════════════════════════╣
      ║              CTA Wrapper             ║              CTA Wrapper             ║
      ╠══════════════════════════════════════╬══════════════════════════════════════╣
      ║            Card Subheading           ║            Card Subheading           ║
      ╚══════════════════════════════════════╩══════════════════════════════════════╝

      For the different amount of cards we use the equivalent amount of grid-template-columns fractions.
      For example grid-items-3 class contains 3 fractions starting from medium size viewports.
*/

.flexible-framer {
  /* Flexible Framer basic styles */
  @include brand-border-overflow;
  @include set-font($font-type: 'primary-font');

  position: relative;
  background-color: clr(subcolor-2);
  color: clr(primary);

  &__heading {
    @include set-font($font-type: 'heading-font');

    position: relative;
    font-weight: 300;
    font-stretch: normal;
    font-style: normal;
    color: clr(primary);
    text-align: center;
    padding-top: 8rem;
    font-size: 4rem;
    line-height: 4rem;
    margin-top: 0;
    margin-bottom: 4rem;

    @include medium {
      font-size: 5.6rem;
      line-height: 5.6rem;
      margin-bottom: 4rem;
    }

    @include large {
      font-size: 6.4rem;
      line-height: 6.4rem;
      margin-bottom: 6rem;
    }
  }

  &__graphic-divider {
    margin-bottom: 4rem;

    @include xl {
      margin-bottom: 6rem;
    }
  }

  /* Grid Layout */
  .grid {
    display: block;
    padding-bottom: 5rem;
    counter-reset: card-counter;
    margin-bottom: 0;

    @include medium {
      display: grid;
      margin: 0 4rem;
      padding-bottom: 6rem;
      grid-column-gap: 2rem;
    }

    @include larger {
      margin-left: auto;
      margin-right: auto;
    }

    @include xl {
      padding-bottom: 8rem;
    }

    &.grid-items-2 {
      @include medium {
        grid-template-columns: 1fr 1fr;
      }

      max-width: 113rem;
      margin: 0 auto;
    }

    &.grid-items-3 {
      @include medium {
        grid-template-columns: 1fr 1fr 1fr;
      }

      .image-wrapper {
        &.image-size-small {
          max-width: 293px;
        }
      }
    }

    &.grid-items-4 {
      @include medium {
        grid-template-columns: 1fr 1fr 1fr 1fr;
      }
    }

    .image-background {
      display: inline-block;
      margin: 0 auto;
      width: 100%;

      a,
      .image-container {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;

        img {
          width: 100%;
          height: 100%;
        }
      }

      &.image-size-large {
        position: relative;
        height: 0;
        padding-top: 56.25%;
      }

      &.image-size-small {
        position: relative;
        height: 0;
        padding-top: 100%;

        & a img {
          object-fit: contain;
        }
      }
    }

    /* Card Elements Styles */
    .image-wrapper {
      counter-increment: card-counter;
      grid-column-start: counter(card-counter);
      grid-column-end: counter(card-counter);
      grid-row-start: 1;
      grid-row-end: 1;
      display: flex;
      justify-content: center;
      align-items: flex-start;
      width: 100%;
      margin: auto;

      &.image-size-large {
        max-width: 335px;

        @include medium {
          max-width: 334px;
        }

        @include large {
          max-width: 433px;
        }
      }

      &.image-size-small {
        max-width: 313px;
      }

      & img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        transition: transform 0.8s;

        &:hover {
          transform: scale(1.1);
        }
      }

      .brand-shape {
        display: none;
      }
    }

    .card {
      &__heading {
        @include set-font($font-type: 'primary-font');

        grid-column-start: counter(card-counter);
        grid-column-end: counter(card-counter);
        grid-row-start: 2;
        grid-row-end: 2;
        text-align: center;
        color: clr(primary);
        font-size: 2rem;
        line-height: 2.2rem;

        &-link {
          color: clr(primary);
          text-decoration: none;

          &:hover {
            color: clr(secondary);
          }
        }

        @include large {
          font-size: 2.4rem;
          line-height: 2.64rem;
        }
      }

      &__body {
        @include set-font($font-type: 'secondary-font');

        grid-column-start: counter(card-counter);
        grid-column-end: counter(card-counter);
        grid-row-start: 3;
        grid-row-end: 3;
        margin: 1.6rem auto 0;
        font-size: 1.6rem;
        line-height: 1.4;
        flex: 1 0 auto;
        max-width: 549px;
        text-align: center;

        @include large {
          font-size: 1.8rem;
        }
      }
    }

    .cta-wrapper {
      grid-column-start: counter(card-counter);
      grid-column-end: counter(card-counter);
      grid-row-start: 4;
      grid-row-end: 4;
      flex: 1 0 auto;
      display: flex;
      justify-content: center;
      align-items: flex-end;
      margin-top: 3rem;

      @include xl {
        margin-top: 4rem;
      }
    }

    .image-wrapper + .card__heading {
      margin-top: 3rem;

      @include xl {
        margin-top: 4rem;
      }
    }

    .image-wrapper--odd.image-size-small {
      .brand-shape {
        display: block;
        width: 100%;
        height: 100%;
        position: absolute;

        svg {
          width: 100%;
          height: 100%;
          max-width: 27.7rem;
          margin-left: 0%;
          fill: clr(subcolor-1);
          opacity: 0.2;
        }
      }

      .image-background {
        position: relative;

        .image {
          position: relative;
        }
      }
    }
  }

  /* Vertical margin between cards */
  .even + .odd,
  .odd + .even {
    margin-top: 4rem;

    @include medium {
      margin-top: 0;
    }
  }
}

